[project]
name = "swala-uptime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "dotenv>=0.9.9",
    "elevenlabs>=2.38.1",
    "fastapi>=0.128.8",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "sarvamai",
]
